[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_rsmahmud"
version = "0.0.1"
authors = [
  { name="Hasan Rasel", email="rrss.mahmud@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rsmahmud/packaging_example"
Issues = "https://github.com/rsmahmud/packaging_example/issues"
